--- a/modules/landing.scss
+++ b/modules/landing.scss
@@ -9,13 +9,12 @@
 	border-width: 2px !important;
 	border-radius: 2px;
 	border-style: solid;
-	font-family: "Josefin Sans", sans;
 	letter-spacing: 4px;
 	padding: 12px 20px;
 	text-transform: uppercase;
 	-webkit-transition: .25s;
 	transition: .25s;
-	:hover {
+	&:hover {
 		background-color: rgba(255, 255, 255, 100);
 		color: rgba(0, 0, 0, 100);
 	}
