--- a/theme/contact.scss
+++ b/theme/contact.scss
@@ -9,7 +9,7 @@
 
 .social-link {
 	color: rgba(0, 0, 0, 100);
-	:hover {
+	&:hover {
 		color: rgba(150, 150, 150, 100);
 		text-decoration: none;
 	}
@@ -18,25 +18,21 @@
 .cv {
 	font-family: "Titillium Web", sans;
 	font-size: 10px;
-}
-
-.cv-name {
-	text-transform: uppercase;
-	font-weight: 900;
+	&.name {
+		text-transform: uppercase;
+		font-weight: 900;
+	}
+	&.date {
+		letter-spacing: 2px;
+		font-size: 1.2em;
+	}
+	&.title {
+		font-weight: 800;
+		font-size: 1.2em;
+	}
 }
 
 .cat-head {
 	font-weight: bold;
 	font-style: italic;
 }
-
-.cv-date {
-	letter-spacing: 2px;
-	font-size: 1.2em;
-}
-
-.cv-title {
-	font-weight: 800;
-	font-size: 1.2em;
-}
-
