--- a/theme/contact.scss
+++ b/theme/contact.scss
@@ -1,5 +1,8 @@
 .contact {
 	font-family: "Titillium Web", sans;
+	&.img-block {
+		padding: 18px;
+	}
 }
 
 .social {
@@ -12,23 +15,6 @@
 	&:hover {
 		color: rgba(150, 150, 150, 100);
 		text-decoration: none;
-	}
-}
-
-.cv {
-	font-family: "Titillium Web", sans;
-	font-size: 10px;
-	&.name {
-		text-transform: uppercase;
-		font-weight: 900;
-	}
-	&.date {
-		letter-spacing: 2px;
-		font-size: 1.2em;
-	}
-	&.title {
-		font-weight: 800;
-		font-size: 1.2em;
 	}
 }
 
