--- a/style.css
+++ b/style.css
@@ -52,8 +52,14 @@ table {
 .titillium {
   font-family: "Titillium Web", sans; }
 
+.josefin {
+  font-family: "Josefin Sans", sans; }
+
 .foot-spacer {
   height: 28px; }
+
+.content-wrapper {
+  padding: 12px; }
 
 .landing-image {
   margin: 0px;
@@ -77,7 +83,6 @@ table {
   border-width: 2px !important;
   border-radius: 2px;
   border-style: solid;
-  font-family: "Josefin Sans", sans;
   letter-spacing: 4px;
   padding: 12px 20px;
   text-transform: uppercase;
@@ -89,6 +94,8 @@ table {
 
 .contact {
   font-family: "Titillium Web", sans; }
+  .contact.img-block {
+    padding: 18px; }
 
 .social {
   font-size: .8em;
@@ -100,24 +107,21 @@ table {
     color: #969696;
     text-decoration: none; }
 
-.cv {
-  font-family: "Titillium Web", sans;
-  font-size: 10px; }
-
-.cv-name {
-  text-transform: uppercase;
-  font-weight: 900; }
-
 .cat-head {
   font-weight: bold;
   font-style: italic; }
 
-.cv-date {
-  letter-spacing: 2px;
-  font-size: 1.2em; }
-
-.cv-title {
-  font-weight: 800;
-  font-size: 1.2em; }
+.cv {
+  font-family: "Titillium Web", sans;
+  font-size: 10px; }
+  .cv.name {
+    text-transform: uppercase;
+    font-weight: 900; }
+  .cv.date {
+    letter-spacing: 2px;
+    font-size: 1.2em; }
+  .cv.title {
+    font-weight: 800;
+    font-size: 1.2em; }
 
 /*# sourceMappingURL=style.css.map */
