adjusted css for contact/cv pages

--- a/style.css
+++ b/style.css
@@ -96,16 +96,54 @@ table {
   font-family: "Titillium Web", sans; }
   .contact.img-block {
     padding: 18px; }
+  .contact.bio-wrapper {
+    padding: 12px; }
+  .contact.form-wrapper {
+    padding: 12px; }
+
+form .field {
+  margin-bottom: 22px;
+  width: 100%; }
+form label {
+  font-size: 12px; }
+
+.wpcf7-text {
+  font-size: 12px; }
+
+.your-name input, .your-email input, .your-subject input, .your-message input {
+  padding: 10px;
+  width: 100%; }
+
+textarea {
+  padding: 10px;
+  width: 100%;
+  border-color: #969696; }
+
+input .wpcf7-submit {
+  font-family: "Titillium Web", sans;
+  background-color: black;
+  color: white;
+  border-color: black;
+  border-width: 2px !important;
+  border-radius: 2px;
+  border-style: solid;
+  padding: 12px, 20px;
+  text-transform: uppercase;
+  -webkit-transition: .25s;
+  transition: .25s; }
+  input .wpcf7-submit:hover {
+    background-color: #646464; }
 
 .social {
   font-size: .8em;
   font-weight: bold; }
-
-.social-link {
-  color: black; }
-  .social-link:hover {
-    color: #969696;
-    text-decoration: none; }
+  .social.wrapper {
+    padding: 12px; }
+  .social.link {
+    color: black; }
+    .social.link:hover {
+      color: #969696;
+      text-decoration: none; }
 
 .cat-head {
   font-weight: bold;
@@ -116,12 +154,25 @@ table {
   font-size: 10px; }
   .cv.name {
     text-transform: uppercase;
-    font-weight: 900; }
+    font-size: 2.2em;
+    font-weight: 900;
+    margin-bottom: 20px; }
   .cv.date {
     letter-spacing: 2px;
     font-size: 1.2em; }
   .cv.title {
     font-weight: 800;
     font-size: 1.2em; }
+
+.contact-wrapper {
+  margin-bottom: 22px; }
+
+.cat-head {
+  font-size: 1.4em;
+  text-transform: uppercase;
+  margin-bottom: 4px; }
+
+.cat-wrapper {
+  margin-bottom: 8px; }
 
 /*# sourceMappingURL=style.css.map */
