--- a/theme/contact.scss
+++ b/theme/contact.scss
@@ -3,18 +3,74 @@
 	&.img-block {
 		padding: 18px;
 	}
+	&.bio-wrapper {
+		padding: 12px;
+	}
+	&.form-wrapper {
+		padding: 12px;
+	}
 }
+
+form {
+	.field {
+		margin-bottom: 22px;
+		width: 100%;
+	}
+	label {
+		font-size: 12px;
+	}
+}
+
+.wpcf7-text {
+	font-size: 12px;
+}
+
+.your-name, .your-email, .your-subject, .your-message {
+	input {
+		padding: 10px;
+		width: 100%;
+	}
+}
+
+textarea {
+	padding: 10px;
+	width: 100%;
+	border-color: rgba(150, 150, 150, 100);
+}
+
+input {
+	.wpcf7-submit {
+		font-family: "Titillium Web", sans;
+		background-color: rgba(0, 0, 0, 100);
+		color: rgba(255, 255, 255, 100);
+		border-color: rgba(0, 0, 0, 100);
+		border-width: 2px !important;
+		border-radius: 2px;
+		border-style: solid;
+		padding: 12px, 20px;
+		text-transform: uppercase;
+		-webkit-transition: .25s;
+		transition: .25s;
+		&:hover {
+			background-color: rgba(100, 100, 100, 100);
+		}
+	}
+}
+
+//*[@id="wpcf7-f36-p32-o1"]/form/p[5]/input
 
 .social {
 	font-size: .8em;
 	font-weight: bold;
-}
-
-.social-link {
-	color: rgba(0, 0, 0, 100);
-	&:hover {
-		color: rgba(150, 150, 150, 100);
-		text-decoration: none;
+	&.wrapper {
+		padding: 12px;
+	}
+	&.link {
+		color: rgba(0, 0, 0, 100);
+		&:hover {
+			color: rgba(150, 150, 150, 100);
+			text-decoration: none;
+		}
 	}
 }
 
