--- a/theme/cv.scss
+++ b/theme/cv.scss
@@ -1,6 +1,7 @@
 .cv {
 	font-family: "Titillium Web", sans;
 	font-size: 10px;
+	line-height: 1.4em;
 	&.name {
 		text-transform: uppercase;
 		font-size: 2.2em;
