--- a/style.css
+++ b/style.css
@@ -151,7 +151,8 @@ input .wpcf7-submit {
 
 .cv {
   font-family: "Titillium Web", sans;
-  font-size: 10px; }
+  font-size: 10px;
+  line-height: 1.4em; }
   .cv.name {
     text-transform: uppercase;
     font-size: 2.2em;
