sidebar mostly done

--- a/layout/l_sidebar.scss
+++ b/layout/l_sidebar.scss
@@ -2,3 +2,28 @@
 	height: 100vh;
 	max-width: 200px;
 }
+
+.logo {
+	margin-bottom: 28px;
+}
+
+.sidebar-top {
+	li {
+		line-height: 1.4em;
+	}
+}
+
+.sidebar-bottom {
+	li {
+		line-height: 2.2em;
+	}
+}
+
+.galleries {
+	font-size: 1.6em;
+	margin-bottom: 22px;
+}
+
+.publicity {
+	font-size: .8em;
+}
