--- a/modules/landing.scss
+++ b/modules/landing.scss
@@ -16,7 +16,7 @@
 	transition: .25s;
 	&:hover {
 		background-color: rgba(255, 255, 255, 100);
-		color: rgba(0, 0, 0, 100);
+		color: #30525E;
 	}
 }
 
