--- a/theme/cv.scss
+++ b/theme/cv.scss
@@ -6,6 +6,7 @@
 		text-transform: uppercase;
 		font-size: 2.2em;
 		font-weight: 900;
+		letter-spacing: 2px;
 		margin-bottom: 20px;
 	}
 	&.date {
