--- a/layout/l_basic.scss
+++ b/layout/l_basic.scss
@@ -6,10 +6,51 @@
 	padding: 12px;
 }
 
+.else-wrapper {
+	position: relative;
+	top: -312px;
+	min-height: 100vh;
+	background-color: #ffffff;
+}
+
 .page-wrapper {
 	display: flex;
 }
 
 .main-content {
 	flex-grow: 1;
+	padding: 12px;
+}
+
+.press-spacer {
+	height: 64px;
+}
+
+.side-content {
+	display: none;
+}
+
+.mobile-toggle {
+	display: flex;
+	padding: 12px;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.press-spacer {
+	display: none;
+}
+
+@media (min-width: 700px) {
+	.side-content {
+		display: block;
+	}
+
+	.mobile-toggle {
+		display: none;
+	}
+
+	.press-spacer {
+		display: block;
+	}
 }
