--- a/theme/cv.scss
+++ b/theme/cv.scss
@@ -1,6 +1,6 @@
 .cv {
 	font-family: "Titillium Web", sans;
-	font-size: 10px;
+	font-size: .8em;
 	line-height: 1.4em;
 	&.name {
 		text-transform: uppercase;
