much improved such wow

--- a/layout/l_sidebar.scss
+++ b/layout/l_sidebar.scss
@@ -6,6 +6,7 @@
 
 .logo {
 	margin-bottom: 28px;
+	height: 60px;
 }
 
 .sidebar-top {
@@ -17,6 +18,7 @@
 .sidebar-bottom {
 	li {
 		line-height: 2.2em;
+		padding: 4px;
 	}
 }
 
