--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@ Version: 1.0.0
 */
 
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Titillium+Web");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700|Titillium+Web:300,400,600,700");
 
 @import "base/base";
 @import "layout/layout";
