--- a/layout/l_basic.scss
+++ b/layout/l_basic.scss
@@ -20,11 +20,16 @@
 
 .page-wrapper {
 	display: flex;
+	height: 100%;
+	width: 100%;
 }
 
 .main-content {
 	flex-grow: 1;
+	position: relative;
 	padding: 12px;
+	height: 75vh;
+	margin: auto;
 }
 
 .press-spacer {
