--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description: Custom theme created for artist Watie White
 Version: 1.0.0
 */
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Titillium+Web");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700|Titillium+Web:300,400,600,700");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -70,6 +70,66 @@ a {
 .upcase {
   text-transform: uppercase; }
 
+.slidebox {
+  position: relative;
+  height: 100%;
+  width: 100%; }
+
+.slideshow {
+  display: none;
+  margin: 0 auto;
+  align-self: center;
+  max-height: 100%;
+  max-width: 100%; }
+
+.grid-item {
+  float: left;
+  height: auto;
+  width: 40%;
+  margin: 2px;
+  display: block !important; }
+
+.grid-item--height3 {
+  width: 80%; }
+
+.slideshow_info_display {
+  display: none;
+  position: absolute;
+  left: 10px;
+  bottom: 50px;
+  z-index: 2;
+  width: 100px;
+  font-size: 12px; }
+
+.gallery {
+  z-index: 2;
+  position: absolute;
+  top: 0px;
+  left: 40%;
+  width: 20%;
+  height: inherit;
+  cursor: n-resize; }
+
+.next {
+  background-color: transparent;
+  z-index: 1;
+  height: inherit;
+  width: 40%;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  cursor: e-resize; }
+
+.prev {
+  background-color: transparent;
+  z-index: 1;
+  height: inherit;
+  width: 40%;
+  position: absolute;
+  cursor: w-resize;
+  top: 0px;
+  left: 0px; }
+
 .foot-spacer {
   height: 28px; }
 
@@ -87,11 +147,16 @@ a {
     top: 0px !important; }
 
 .page-wrapper {
-  display: flex; }
+  display: flex;
+  height: 100%;
+  width: 100%; }
 
 .main-content {
   flex-grow: 1;
-  padding: 12px; }
+  position: relative;
+  padding: 12px;
+  height: 75vh;
+  margin: auto; }
 
 .press-spacer {
   height: 64px; }
@@ -135,13 +200,15 @@ a {
   max-width: 200px; }
 
 .logo {
-  margin-bottom: 28px; }
+  margin-bottom: 28px;
+  height: 60px; }
 
 .sidebar-top li {
   line-height: 1.4em; }
 
 .sidebar-bottom li {
-  line-height: 2.2em; }
+  line-height: 2.2em;
+  padding: 4px; }
 
 .galleries {
   font-size: 1.6em;
@@ -233,11 +300,7 @@ form label {
   font-size: 12px; }
 
 .wpcf7-text {
-  font-size: 12px;
-  background-color: #f9f9f9; }
-
-.wpcf7-textarea {
-  background-color: #f9f9f9; }
+  font-size: 12px; }
 
 .your-name input, .your-email input, .your-subject input, .your-message input {
   padding: 10px;
