--- a/theme/contact.scss
+++ b/theme/contact.scss
@@ -61,12 +61,9 @@ textarea {
 	}
 }
 
-
-//*[@id="wpcf7-f36-p32-o1"]/form/p[5]/input
-
 .social {
+	font-family: "Titillium Web", sans;
 	font-size: .8em;
-	font-weight: bold;
 	&.wrapper {
 		padding: 12px;
 	}
