--- a/base/layout/l_basic.scss
+++ b/base/layout/l_basic.scss
@@ -8,7 +8,7 @@
 
 .else-wrapper {
 	position: relative;
-	top: -266px;
+	top: -312px;
 	min-height: 100vh;
 	background-color: #ffffff;
 	-webkit-transition: .25s;
@@ -28,15 +28,8 @@
 	flex-grow: 1;
 	position: relative;
 	padding: 12px;
-	height: 90vh;
-	margin: 12px auto;
-}
-
-.contact.img-block {
-	text-align: center;
-	img {
-		max-height: 50vh;
-	}
+	height: 80vh;
+	margin: auto;
 }
 
 .press-spacer {
