--- a/modules/sidebar.scss
+++ b/modules/sidebar.scss
@@ -2,6 +2,7 @@
 	a {
 		font-weight: 200;
 		color: rgba(0, 0, 0, 100);
+		text-decoration: none;
 		&:hover {
 			color: #30535e;
 			text-decoration: none;
@@ -16,6 +17,7 @@
 	a {
 		font-weight: 600;
 		color: rgba(0, 0, 0, 100);
+		text-decoration: none;
 		&:hover {
 			color: #30535e;
 			text-decoration: none;
