--- a/layout/l_sidebar.scss
+++ b/layout/l_sidebar.scss
@@ -5,8 +5,9 @@
 }
 
 .logo {
-	margin-bottom: 28px;
-	height: 60px;
+	margin-top: 16px;
+	margin-bottom: 12px;
+	width: 152px;
 }
 
 .sidebar-top {
@@ -30,6 +31,6 @@
 .publicity {
 	font-size: .8em;
 	li {
-		line-height: 1.8em;
+		line-height: 1.2em;
 	}
 }
