--- a/style.css
+++ b/style.css
@@ -111,12 +111,13 @@ a {
 
 .slideshow_info_display {
   background-color: white;
+  padding-top: 8px;
   display: none;
   position: fixed !important;
   left: 12px !important;
   bottom: 0px !important;
   z-index: 2;
-  width: 160px;
+  width: 100vw;
   font-size: 12px; }
 
 .gallery {
@@ -154,6 +155,9 @@ a {
     margin-left: 10px;
     animation: fadeIn; }
 
+  .slideshow_info_display {
+    max-width: 160px; }
+
   .grid-item--width3 {
     width: 80%; } }
 .foot-spacer {
@@ -182,15 +186,16 @@ a {
   position: relative;
   padding: 12px;
   height: 90vh;
-  margin: 12px auto; }
+  margin: 28px auto auto auto; }
 
 .contact.img-block {
-  text-align: center; }
+  text-align: left; }
   .contact.img-block img {
-    max-height: 50vh; }
+    width: 100%;
+    max-width: 600px; }
 
 .press-spacer {
-  height: 64px; }
+  height: 114px; }
 
 .side-content {
   display: none; }
@@ -231,8 +236,9 @@ a {
   max-width: 200px; }
 
 .logo {
-  margin-bottom: 28px;
-  height: 60px; }
+  margin-top: 16px;
+  margin-bottom: 12px;
+  width: 152px; }
 
 .sidebar-top a {
   line-height: 1.4em !important; }
@@ -248,11 +254,14 @@ a {
 .publicity {
   font-size: .8em; }
   .publicity li {
-    line-height: 1.8em; }
+    line-height: 1.2em; }
 
 .top-menu-wrapper {
   z-index: -1;
   padding: 18px; }
+
+.mobile-logo {
+  width: 100%; }
 
 .nav-item li {
   padding: 4px; }
@@ -266,68 +275,24 @@ a {
   line-height: 2.4em;
   font-size: 1.2em; }
 
-.landing-image {
-  background-image: url("/wp-content/uploads/2017/04/3-Holy-Island-Visitors.jpg"); }
-
-.landing-button {
-  background-color: transparent;
-  color: white;
-  border-color: white;
-  border-width: 2px !important;
-  border-radius: 2px;
-  border-style: solid;
-  letter-spacing: 4px;
-  padding: 12px 20px;
-  text-transform: uppercase;
-  -webkit-transition: .25s;
-  transition: .25s; }
-  .landing-button:hover {
-    background-color: white;
-    color: #30525E; }
-
-.sidebar-top a {
-  font-weight: 200;
-  color: black; }
-  .sidebar-top a:hover {
-    color: #30535e;
-    text-decoration: none; }
-.sidebar-top li {
+.page_item li {
   padding: 4px; }
-
-.sidebar-bottom a {
-  font-weight: 600;
-  color: black; }
-  .sidebar-bottom a:hover {
-    color: #30535e;
-    text-decoration: none; }
-
-.top-menu-wrapper {
-  background-color: #30535e; }
-
-.nav-list li {
-  text-align: center; }
-.nav-list a {
-  font-weight: 200;
-  color: #cdcdcd; }
-  .nav-list a:hover {
-    color: #fcfcfc;
-    text-decoration: none; }
-
-.toggler {
-  -webkit-transition: .25s;
-  transition: .25s; }
-  .toggler:hover {
-    color: #30535e;
-    text-decoration: none; }
+.page_item a {
+  line-height: 2.4em;
+  font-size: 1.2em; }
 
 .contact {
   font-family: "Titillium Web", sans; }
   .contact.img-block {
-    padding: 18px; }
+    padding: 8px 18px; }
   .contact.bio-wrapper {
-    padding: 12px; }
+    padding: 12px;
+    max-width: 640px; }
+    .contact.bio-wrapper p {
+      margin-bottom: 8px; }
   .contact.form-wrapper {
-    padding: 12px; }
+    padding: 12px;
+    max-width: 640px; }
 
 .bio {
   font-size: .8em; }
@@ -381,6 +346,8 @@ textarea {
   font-family: "Titillium Web", sans;
   font-size: .8em;
   line-height: 1.4em; }
+  .cv.content-wrapper {
+    padding: 0px 12px; }
   .cv.name {
     text-transform: uppercase;
     font-size: 2.2em;
