--- a/base/fonts.scss
+++ b/base/fonts.scss
@@ -9,7 +9,7 @@
 a {
 	color: rgba(0, 0, 0, 100);
 	&:hover {
-		color: #30535e;
+		color: rgba(150, 150, 150, 100);
 		text-decoration: none;
 	}
 }
